--- a/input_types.html
+++ b/input_types.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Inputs</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
         <h1>Diferentes tipos de inputs</h1>
     </center>
     <p>Ningun dato aqui se guardara o se enviara a ningun sitio</p>
-    <hr size="4" noshade>
+    <hr>
     <form action="">
             <label for="">Aqui va un texto</label>
             <input type="text" name="" id="">
@@ -59,8 +60,8 @@
         <label for="">Aqui va un boton</label>
         <input type="button" name="" id="", value="El boton es este">
     </form>
-    <hr size="10" noshade> 
-    <a href="pagina web.html">Volver a main page</a>
+    <hr> 
+    <a href="index.html">Volver a main page</a>
 
     
 </body>
