--- a/Contacto.html
+++ b/Contacto.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Contact</title>
 </head>
 <body>
     <center>
         <h1>Contacto</h1>
     </center>
-    <hr size="5" noshade>
+    <hr>
     <h2>Contacto Email</h2>
     <p>Email: m.moreno.2@europais.net</p>  
-<hr size="3" noshade="">
+<hr>
 <center>
     <h1>Contacta conmigo de forma directa</h1>
 </center>
@@ -27,7 +28,7 @@
         <textarea name="yourmessage" id="" cols="30" rows="10"></textarea> <br>
         <input type="submit" name="" id="">
     </form>
-    <hr size="3" noshade>
-    <a href="pagina web.html">Volver a main page</a>
+    <hr>
+    <a href="index.html">Volver a main page</a>
 </body>
 </html>
