--- a/Progaming_lng.html
+++ b/Progaming_lng.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/styles.css">
     
     <title>Programing</title>
 </head>
@@ -15,6 +16,6 @@
     <img src="images/html.png" alt="html logo"> 
     <img src="images/python.jpeg" alt="python logo">
     <br>
-    <a href="pagina web.html">Volver a main page</a>
+    <a href="index.html">Volver a main page</a>
 </body>
 </html>
