--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </tr>
             <tr>
                 <td>Python</td>
-                <td>B2 (Not an official certificate)</td>
+                <td>Intermedio</td>
             </tr>
             <tr>
                 <td>HTML5</td>
@@ -89,6 +89,11 @@
         <li><h2><a href="Contacto.html"> Contacto</a></h2></li>
     </ul>
     <hr>
+    <center>
+        <h1>Hobbies</h1>
+  
+    <iframe width="500px" height="300px" src="https://www.youtube.com/embed/uIfghi773WI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </center>
     <center>
         <h1>Extra</h1>
     </center>
